Пока закончил верстать index.html catalog.html

--- a/source/index.html
+++ b/source/index.html
@@ -17,13 +17,13 @@
         <button class="nav__toggle" type="button">Открыть меню</button>
         <ul class="nav__list site-list">
           <li class="site-list__item">
-            <a href="">Главная</a>
+            <a href="#">Главная</a>
           </li>
           <li class="site-list__item">
               <a href="">Подбор программы</a>
             </li>
             <li class="site-list__item">
-                <a href="">Каталог продукции</a>
+                <a href="catalog.html">Каталог продукции</a>
               </li>
         </ul>
       </nav>
