Исправил замечания по index.html

--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,10 @@
         <img class="logo-txt__txt" src="" width="101" height="18" alt="Cat energy">
       </a>
       <nav class="nav">
-        <!--Почему в Барбершоп main-nav не привязывали к блоку Header?-->
         <button class="nav__toggle" type="button">Открыть меню</button>
         <ul class="nav__list site-list">
           <li class="site-list__item">
-            <a href="#">Главная</a>
+            <a href="">Главная</a>
           </li>
           <li class="site-list__item">
               <a href="">Подбор программы</a>
@@ -46,7 +45,7 @@
               и почти утратил способность лазить по деревьям? Пора на диету!
               Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="cover__transition button" href="">Каталог Slim</a>
+            <a class="programs__transition" href="">Каталог Slim</a>
           </li>
           <li class="programs__item programs__item--pro">
               <h3 class="programs__title">Набор массы</h3>
@@ -54,12 +53,12 @@
                 дворовых котов и даже собак? Серия Cat Energy Pro
                 поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="cover__transition button" href="">Каталог Pro</a>
+              <a class="cover__transition" href="">Каталог Pro</a>
             </li>
         </ul>
       </section>
       <section class="faq">
-        <h2 class="fac__title">Как это работает</h2>
+        <h2 class="faq__title">Как это работает</h2>
         <ul class="faq__list">
           <li class="faq__item faq__item--ingredients">
             <p class="faq__description">Функциональное питание
@@ -105,7 +104,7 @@
         </div>
         <div class="example__visually">
           <img class="example__img example__img--before" src="" width="300" height="230" alt="Кот в начале диеты">
-          <img class="example__img example__img--after" src="" width="300" height="230" alt="Кот в начале диеты">
+          <img class="example__img example__img--after" src="" width="300" height="230" alt="Кот в конце диеты">
           <div class="example__range">
             <button class="example__btn">Было</button>
             <div class="example__progress">
