Исправил замечание href в обоих файлах

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <button class="nav__toggle" type="button">Открыть меню</button>
         <ul class="nav__list site-list">
           <li class="site-list__item">
-            <a href="">Главная</a>
+            <a>Главная</a>
           </li>
           <li class="site-list__item">
               <a href="">Подбор программы</a>
