--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,13 +17,13 @@
       <button class="nav__toggle" type="button">Открыть меню</button>
       <ul class="nav__list site-list">
         <li class="site-list__item">
-          <a href="#">Главная</a>
+          <a href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
           <a href="">Подбор программы</a>
         </li>
         <li class="site-list__item">
-          <a href="catalog.html">Каталог продукции</a>
+          <a>Каталог продукции</a>
         </li>
       </ul>
     </nav>
