--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
             <a>Главная</a>
           </li>
           <li class="site-list__item">
-              <a href="">Подбор программы</a>
+              <a href="form.html">Подбор программы</a>
             </li>
             <li class="site-list__item">
                 <a href="catalog.html">Каталог продукции</a>
@@ -45,7 +45,7 @@
               и почти утратил способность лазить по деревьям? Пора на диету!
               Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="programs__transition" href="">Каталог Slim</a>
+            <a class="programs__transition" href="form.html">Каталог Slim</a>
           </li>
           <li class="programs__item programs__item--pro">
               <h3 class="programs__title">Набор массы</h3>
@@ -53,7 +53,7 @@
                 дворовых котов и даже собак? Серия Cat Energy Pro
                 поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="cover__transition" href="">Каталог Pro</a>
+              <a class="programs__transition" href="form.html">Каталог Pro</a>
             </li>
         </ul>
       </section>
@@ -118,7 +118,7 @@
         <h2 class="address__title">приглашаем к сотрудничеству дилеров!</h2>
         <p class="address__description">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         <div class="address__map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1563183216079!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1563183216079!5m2!1sru!2sru" width="600" height="450"  style="border:0" allowfullscreen></iframe>
         </div>
       </section>
     </main>
