Пока закончил оформлять index.html, catalog.html, form.html

--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
         <b class="cover__intro">Занялся собой? Займись котом!</b>
         <img class="cover__banner" src="img/index-can-mobile@1x.png" width="280" height="271"
           alt="Изображение продукции - питание для котов">
-        <a class="cover__transition button" href="form.html">Подобрать программу</a>
+        <a class="cover__transition button button--small" href="form.html">Подобрать программу</a>
       </div>
       <section class="programs">
         <h2 class="visually-hidden">Выбор программы</h2>
