--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,7 +38,7 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy PRO Курица">
             </a>
             <table class="catalog__table">
@@ -62,7 +62,7 @@
           </li>
           <li class="catalog__item">
               <a class="catalog__link-img" href="#">
-                <img class="catalog__img" src="" width="140" height="144"
+                <img class="catalog__img" src="img\chicken-big-mobile@1x.jpg" width="140" height="144"
                 alt="Изображение продукции - Cat Energy PRO Курица">
               </a>
               <table class="catalog__table">
@@ -86,7 +86,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img\fish-small-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy PRO Рыба">
             </a>
             <table class="catalog__table">
@@ -110,7 +110,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy PRO Рыба">
             </a>
             <table class="catalog__table">
@@ -134,7 +134,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img\buckwheat-small-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy. Гречка">
             </a>
             <table class="catalog__table">
@@ -158,7 +158,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img\buckwheat-big-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy. Гречка">
             </a>
             <table class="catalog__table">
@@ -182,7 +182,7 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
-              <img class="catalog__img" src="" width="140" height="144"
+              <img class="catalog__img" src="img\rice-small-mobile@1x.jpg" width="140" height="144"
               alt="Изображение продукции - Cat Energy. Рис">
             </a>
             <table class="catalog__table">
