--- a/source/index.html
+++ b/source/index.html
@@ -155,7 +155,7 @@
         </li>
         <li class="social__item">
           <a class="social__link social__link--insta" href="">
-              <svg class="social__insta version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg class="social__insta" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve" width="16px" height="16px">
               <title>instagram</title>
               <style type="text/css">
