--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <div class="header__logo-wrapper">
-        <a class="header__logo">
+        <a class="header__logo header__logo--active">
           <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
         </a>
         <button class="header__toggle" type="button">
@@ -128,7 +128,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__logo">
+      <a class="footer__logo footer__logo--active">
         <img class="footer__logo-txt" src="img/logo-footer.svg" width="128px" height="24px" alt="Cat energy">
       </a>
       <ul class="footer__social social">
@@ -183,7 +183,7 @@
       <p class="footer__copyright copyright">
         <a class="copyright__link-txt" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__link-img" href="https://htmlacademy.ru/intensive/adaptive" >
-          <svg class="copyright__img" width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40" preserveAspectRatio="xMidYMid meet">
+          <svg class="copyright__img" width="100" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40" preserveAspectRatio="xMidYMid meet">
             <!-- viewBox="0 0 60 60" -->
             <!-- viewBox="10 10 40 40" -->
             <title>HTML Academy</title>
