--- a/source/form.html
+++ b/source/form.html
@@ -8,28 +8,28 @@
   </head>
   <body>
     <header class="header">
-        <div class="header__logo-wrapper">
-          <a class="header__logo">
-            <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
-          </a>
-          <button class="header__toggle" type="button">
-            Открыть меню
-            <!-- <span class="visually-hidden"></span> -->
-          </button>
-        </div>
-        <nav class="nav">
-          <ul class="nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-lis__link" href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
+      <div class="header__logo-wrapper">
+        <a class="header__logo">
+          <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
+        </a>
+        <button class="header__toggle header__toggle--opened header__toggle--nojs" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+          <!-- <span class="visually-hidden"></span> -->
+        </button>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list site-list site-list--closed">
+          <li class="site-list__item">
+            <a class="site-lis__link" href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
               <a class="site-lis__link" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="site-list__item ">
+          <li class="site-list__item">
               <a class="site-lis__link site-lis__link--active">Подбор программы</a>
             </li>
-          </ul>
-        </nav>
+        </ul>
+      </nav>
     </header>
     <main class="main">
       <section class="address">
@@ -105,5 +105,6 @@
         </a>
       </p>
     </footer>
+    <script type="text/javascript" src="js/nav.js"></script>
   </body>
 </html>
