оформление catalog.html с вопросами

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -203,7 +203,7 @@
             </table>
             <a class="catalog__btn button" href="#">Заказать</a>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item catalog__item--add">
             <h3 class="catalog__par">Показать еще 100500 товаров</h3>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
             <a class="catalog__btn button button--light" href="#">Показать все</a>
