--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+      document.createElement("picture");
+    </script>
+    <script src="js/picturefill.js" async></script>
   </head>
   <body>
     <svg style="display: none">
@@ -35,7 +39,7 @@
             <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
           </picture>
         </a>
-        <button class="header__toggle header__toggle--opened header__toggle--nojs" type="button">
+        <button class="header__toggle header__toggle--closed header__toggle--nojs" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
