--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,7 @@
             <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
           </picture>
         </a>
-        <button class="header__toggle header__toggle--opened header__toggle--nojs" type="button">
+        <button class="header__toggle header__toggle--closed header__toggle--nojs" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
@@ -46,6 +46,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-small-desktop@2x.webp 2x, img/chicken-small-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@2x.webp 2x, img/chicken-small-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/chicken-small-mobile@2x.webp 2x, img/chicken-small-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@2x.png 2x, img/chicken-small-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@2x.png 2x, img/chicken-small-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144"
@@ -74,6 +77,9 @@
           <li class="catalog__item">
               <a class="catalog__link-img" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-big-desktop@2x.webp 2x, img/chicken-big-desktop@1x.webp 1x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@2x.webp 2x, img/chicken-big-tablet@1x.webp 1x">
+                  <source type="image/webp" srcset="img/chicken-big-mobile@2x.webp 2x, img/chicken-big-mobile@1x.webp 1x">
                   <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@2x.png 2x, img/chicken-big-desktop@1x.png 1x">
                   <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@2x.png 2x, img/chicken-big-tablet@1x.png 1x">
                   <img class="catalog__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144"
@@ -102,6 +108,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-small-desktop@2x.webp 2x, img/fish-small-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@2x.webp 2x, img/fish-small-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/fish-small-mobile@2x.webp 2x, img/fish-small-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@2x.png 2x, img/fish-small-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/fish-small-tablet@2x.png 2x, img/fish-small-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144"
@@ -130,6 +139,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-big-desktop@2x.webp 2x, img/fish-big-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@2x.webp 2x, img/fish-big-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/fish-big-mobile@2x.webp 2x, img/fish-big-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@2x.png 2x, img/fish-big-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/fish-big-tablet@2x.png 2x, img/fish-big-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144"
@@ -158,6 +170,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@2x.webp 2x, img/buckwheat-small-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@2x.webp 2x, img/buckwheat-small-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/buckwheat-small-mobile@2x.webp 2x, img/buckwheat-small-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@2x.png 2x, img/buckwheat-small-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@2x.png 2x, img/buckwheat-small-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144"
@@ -186,6 +201,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@2x.webp 2x, img/buckwheat-big-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@2x.webp 2x, img/buckwheat-big-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/buckwheat-big-mobile@2x.webp 2x, img/buckwheat-big-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@2x.png 2x, img/buckwheat-big-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@2x.png 2x, img/buckwheat-big-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144"
@@ -214,6 +232,9 @@
           <li class="catalog__item">
             <a class="catalog__link-img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)" srcset="img/rice-small-desktop@2x.webp 2x, img/rice-small-desktop@1x.webp 1x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@2x.webp 2x, img/rice-small-tablet@1x.webp 1x">
+                <source type="image/webp" srcset="img/rice-small-mobile@2x.webp 2x, img/rice-small-mobile@1x.webp 1x">
                 <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@2x.png 2x, img/rice-small-desktop@1x.png 1x">
                 <source media="(min-width: 768px)" srcset="img/rice-small-tablet@2x.png 2x, img/rice-small-tablet@1x.png 1x">
                 <img class="catalog__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144"
