--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
             <img class="header__logo-img" src="img/logo-mobile.svg"  alt="Логотип Cat energy">
           </picture>
         </a>
-        <button class="header__toggle header__toggle--opened header__toggle--nojs" type="button">
+        <button class="header__toggle header__toggle--closed header__toggle--nojs" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
