--- a/source/index.html
+++ b/source/index.html
@@ -65,6 +65,9 @@
             питание для котов</b>
           <b class="cover__intro">Занялся собой? Займись котом!</b>
           <picture>
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@2x.webp 2x, img/index-can-desktop@1x.webp 1x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@2x.webp 2x, img/index-can-tablet@1x.webp 1x">
+            <source type="image/webp" srcset="img/index-can-mobile@2x.webp 2x, img/index-can-mobile@1x.webp 1x">
             <source media="(min-width: 1300px)" srcset="img/index-can-desktop@2x.png 2x, img/index-can-desktop@1x.png 1x">
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@2x.jpg 2x, img/index-can-tablet@1x.jpg 1x">
             <img class="cover__banner" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" width="280" height="271"
