Начал доделывать catalog

--- a/source/index.html
+++ b/source/index.html
@@ -30,13 +30,13 @@
       <nav class="nav">
         <ul class="nav__list site-list site-list--closed site-list--index">
           <li class="site-list__item">
-            <a class="site-lis__link site-lis__link--active">Главная</a>
+            <a class="site-list__link site-list__link--active">Главная</a>
           </li>
           <li class="site-list__item">
-              <a class="site-lis__link" href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
             </li>
           <li class="site-list__item">
-              <a class="site-lis__link" href="form.html">Подбор программы</a>
+              <a class="site-list__link" href="form.html">Подбор программы</a>
             </li>
         </ul>
       </nav>
@@ -45,8 +45,7 @@
       <h1 class="visually-hidden">Cat energy - Функциональное питание для котов</h1>
       <div class="cover">
         <div class="cover__container">
-          <b class="cover__slogan">Функциональное<br>
-            питание для котов</b>
+          <b class="cover__slogan">Функциональное питание для котов</b>
           <b class="cover__intro">Занялся собой? Займись котом!</b>
           <picture>
             <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@2x.webp 2x, img/index-can-desktop@1x.webp 1x">
@@ -128,12 +127,12 @@
         </div>
         <div class="example__visually">
           <img class="example__img example__img--before" src="img/before-mobile@1x.png" width="300" height="230" alt="Кот в начале диеты">
-          <img class="example__img example__img--after" src="img/after-mobile@1x.png" style="width: 50%" height="230" alt="Кот в конце диеты">
+          <img class="example__img example__img--after" src="img/after-mobile@1x.png" width="300" height="230" alt="Кот в конце диеты">
           <!-- width="300" -->
           <!-- style="width: 50%" -->
           <div class="example__range">
             <button class="example__btn">Было</button>
-            <input class="example__progress" type="range" min="1" max="100" value="50">
+            <input class="example__progress" type="range" min="0" max="100" value="50">
             <!-- <div class="example__progress">
               <div class="example__togggle"></div>
             </div> -->
@@ -159,6 +158,7 @@
         <ul class="footer__social social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Vkontakte</span>
               <svg class="social__vk" width="22" height="12" role="img">
                 <use xlink:href="#icon-vk"></use>
               </svg>
@@ -166,6 +166,7 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--insta" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Instagram</span>
               <svg class="social__insta" width="16" height="16" role="img">
                 <use xlink:href="#icon-insta"></use>
               </svg>
@@ -173,6 +174,7 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Facebook</span>
               <svg class="social__fb" width="10" height="19" role="img">
                 <use xlink:href="#icon-fb"></use>
               </svg>
