--- a/source/form.html
+++ b/source/form.html
@@ -28,13 +28,13 @@
       <nav class="nav">
         <ul class="nav__list site-list site-list--closed">
           <li class="site-list__item">
-            <a class="site-lis__link" href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-              <a class="site-lis__link" href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
             </li>
           <li class="site-list__item">
-              <a class="site-lis__link site-lis__link--active">Подбор программы</a>
+              <a class="site-list__link site-list__link--active">Подбор программы</a>
             </li>
         </ul>
       </nav>
@@ -58,6 +58,7 @@
         <ul class="footer__social social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Vkontakte</span>
               <svg class="social__vk" width="22" height="12" role="img">
                 <use xlink:href="#icon-vk"></use>
               </svg>
@@ -65,6 +66,7 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--insta" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Instagram</span>
               <svg class="social__insta" width="16" height="16" role="img">
                 <use xlink:href="#icon-insta"></use>
               </svg>
@@ -72,6 +74,7 @@
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="">
+              <span class="visually-hidden">Ссылка на Cat Energy в Facebook</span>
               <svg class="social__fb" width="10" height="19" role="img">
                 <use xlink:href="#icon-fb"></use>
               </svg>
