Доделал catalog, начал form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -286,7 +286,7 @@
             <table class="products__table">
               <tr>
                 <td class="products__data">5 литров</td>
-                <td class="products__value">50Р.</td>
+                <td class="products__value">50 Р.</td>
               </tr>
             </table>
             <a class="products__btn button" href="#">Заказать</a>
@@ -296,7 +296,7 @@
             <table class="products__table">
               <tr>
                 <td class="products__data">1 литр</td>
-                <td class="products__value">100Р.</td>
+                <td class="products__value">100 Р.</td>
               </tr>
             </table>
             <a class="products__btn button" href="#">Заказать</a>
@@ -306,7 +306,7 @@
               <table class="products__table">
                 <tr>
                   <td class="products__data">1 упаковка (30 г)</td>
-                  <td class="products__value">300Р.</td>
+                  <td class="products__value">300 Р.</td>
                 </tr>
               </table>
               <a class="products__btn button" href="#">Заказать</a>
@@ -316,7 +316,7 @@
           <svg class="bonus__svg" width="55" height="60" role="img">
             <use xlink:href="#icon-gift"></use>
           </svg>
-          <p class="bonus__txt">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="bonus__txt">Закажите все <br> и получите чехол для кота в подарок!</p>
         </div>
       </section>
       <section class="address address--notindex">
